--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SsgConnectorPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SsgConnectorPropertiesDialog.form
@@ -337,7 +337,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <grid id="e67d4" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="e67d4" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -355,7 +355,7 @@
                   </component>
                   <component id="defd4" class="javax.swing.JButton" binding="defaultCipherListButton">
                     <constraints>
-                      <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <text value="Use &amp;Default List"/>
@@ -372,6 +372,14 @@
                     </constraints>
                     <properties>
                       <text value="Move Down"/>
+                    </properties>
+                  </component>
+                  <component id="67f28" class="javax.swing.JButton" binding="uncheckAllButton" default-binding="true">
+                    <constraints>
+                      <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="&amp;Uncheck All"/>
                     </properties>
                   </component>
                 </children>
